数据存入文件&修改标题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Strain Sensor APP</string>
+    <string name="app_name">Pressure Sensor APP</string>
 </resources>
